--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 python-telegram-bot==20.3
-websocket-client==1.7.0
 requests==2.31.0
+websocket-client==1.7.0
 python-dotenv==1.0.0
-
+httpx==0.24.1
