--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,22 @@
-python-telegram-bot==20.3
+# Telegram bot framework (with webhook support)
+python-telegram-bot[webhooks]==20.3
+
+# HTTP & API dependencies
+httpx==0.24.1
 requests==2.31.0
 websocket-client==1.7.0
+
+# Environment variable management
 python-dotenv==1.0.0
-httpx==0.24.1
+
+# --- Optional / Safe upgrades ---
+# These packages are indirect dependencies used by httpx & requests.
+# They are pinned for build stability on Render.
+anyio==4.11.0
+h11==0.14.0
+idna==3.10
+urllib3==2.5.0
+certifi==2025.10.5
+charset-normalizer==3.4.3
+sniffio==1.3.1
+httpcore==0.17.3
