--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-email=
-password=
+IQ_EMAIL=Goodnessgushe15@gmail.com
+IQ_PASSWORD=IQmKA647KA
+TELEGRAM_TOKEN=8350764705:AAFulH1uVxmrAgqb-6nIADGCc86IjmetDH8
