--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 IQ_EMAIL=Goodnessgushe15@gmail.com
 IQ_PASSWORD=IQmKA647KA
 TELEGRAM_TOKEN=8350764705:AAFulH1uVxmrAgqb-6nIADGCc86IjmetDH8
+ADMIN_ID=6576377077
