feat: Implement automated trading from Telegram channel signals with new monitoring, parsing, trade management, bot supervision, and health check modules.

--- a/.env
+++ b/.env
@@ -2,3 +2,18 @@ IQ_EMAIL=Goodnessgushe15@gmail.com
 IQ_PASSWORD=IQmKA647KA
 TELEGRAM_TOKEN=8350764705:AAFulH1uVxmrAgqb-6nIADGCc86IjmetDH8
 ADMIN_ID=6576377077
+
+# Telegram API credentials for channel monitoring (get from https://my.telegram.org/auth)
+TELEGRAM_API_ID=30186300
+TELEGRAM_API_HASH=e7fc49144907fb9404839d068b9696ad
+SIGNAL_CHANNEL_ID=-1003457213931
+# Health monitoring
+HEALTH_CHECK_INTERVAL=300
+HEARTBEAT_TIMEOUT=600
+
+# Auto-restart
+MAX_RESTART_ATTEMPTS=5
+RESTART_DELAY=10
+
+# Database
+DATABASE_PATH=trades.db-1003457213931
