feat: Introduce timezone awareness for accurate signal parsing, trade execution, and bot status reporting, configurable via .env and Telegram.

--- a/.env
+++ b/.env
@@ -16,4 +16,8 @@ MAX_RESTART_ATTEMPTS=5
 RESTART_DELAY=10
 
 # Database
-DATABASE_PATH=trades.db-1003457213931
+DATABASE_PATH=trades.db
+
+# Timezone (use pytz timezone names, e.g., America/Sao_Paulo, Europe/London, UTC)
+# Common timezones: America/New_York, America/Sao_Paulo, Europe/London, Asia/Tokyo
+TIMEZONE=America/Sao_Paulo
