--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,9 @@ openpyxl==3.1.2
 # Process monitoring
 psutil==5.9.6
 
+# Timezone support
+pytz==2024.1
+
 # HTTP & API dependencies
 httpx==0.24.1
 requests==2.31.0
