--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,4 @@
-services:
+Services:
   - type: web
     name: iqoptions-tradebot
     env: python
@@ -7,9 +7,37 @@ services:
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python telegram_bot.py"
     envVars:
+      # --- Sensitive Credentials (MUST be added in Render Dashboard, sync: false) ---
+      # These values must be manually input in the Environment section of your Render service.
       - key: IQ_EMAIL
-        sync: false   # add in Render dashboard
+        sync: false
       - key: IQ_PASSWORD
-        sync: false   # add in Render dashboard
+        sync: false
+        
+      # --- Telegram Credentials (MUST be added in Render Dashboard, sync: false) ---
       - key: TELEGRAM_TOKEN
-        sync: false   # add in Render dashboard
+        sync: false
+      - key: ADMIN_ID
+        sync: false
+      - key: TELEGRAM_API_ID
+        sync: false
+      - key: TELEGRAM_API_HASH
+        sync: false
+      - key: SIGNAL_CHANNEL_ID
+        sync: false
+      
+      # --- Health Monitoring and Auto-restart Settings (Values retained) ---
+      - key: HEALTH_CHECK_INTERVAL
+        value: 300
+      - key: HEARTBEAT_TIMEOUT
+        value: 600
+      - key: MAX_RESTART_ATTEMPTS
+        value: 5
+      - key: RESTART_DELAY
+        value: 10
+
+      # --- Database and Timezone (Values retained) ---
+      - key: DATABASE_PATH
+        value: trades.db
+      - key: TIMEZONE
+        value: America/Sao_Paulo
