--- a/render.yaml
+++ b/render.yaml
@@ -1,44 +1,15 @@
-spec:
-  # The services key now holds the list of services (your tradebot)
-  services:
-    - type: web
-      name: iqoptions-tradebot
-      env: python
-      plan: free
-      region: frankfurt   # or oregon if closer
-      buildCommand: "pip install -r requirements.txt"
-      startCommand: "python telegram_bot.py"
-      envVars:
-        # ------------------------------------------------------------------
-        # --- SENSITIVE VARIABLES (MUST BE ADDED IN RENDER DASHBOARD) ---
-        # ------------------------------------------------------------------
-        - key: IQ_EMAIL
-          sync: false
-        - key: IQ_PASSWORD
-          sync: false
-        - key: TELEGRAM_TOKEN
-          sync: false
-        - key: ADMIN_ID
-          sync: false
-        - key: TELEGRAM_API_ID
-          sync: false
-        - key: TELEGRAM_API_HASH
-          sync: false
-        - key: SIGNAL_CHANNEL_ID
-          sync: false
-        
-        # ------------------------------------------------------------------
-        # --- CONFIGURATION VARIABLES (VALUES ARE STORED IN YAML/GIT) ---
-        # ------------------------------------------------------------------
-        - key: HEALTH_CHECK_INTERVAL
-          value: 300
-        - key: HEARTBEAT_TIMEOUT
-          value: 600
-        - key: MAX_RESTART_ATTEMPTS
-          value: 5
-        - key: RESTART_DELAY
-          value: 10
-        - key: DATABASE_PATH
-          value: trades.db
-        - key: TIMEZONE
-          value: America/Sao_Paulo
+Services:
+  - type: web
+    name: iqoptions-tradebot
+    env: python
+    plan: free
+    region: frankfurt   # or oregon if closer
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python telegram_bot.py"
+    envVars:
+      - key: IQ_EMAIL
+        sync: false   # add in Render dashboard
+      - key: IQ_PASSWORD
+        sync: false   # add in Render dashboard
+      - key: TELEGRAM_TOKEN
+        sync: false   # add in Render dashboard
