--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
-Services:
+services:
   - type: web
     name: iqoptions-tradebot
     env: python
     plan: free
-    region: frankfurt   # or oregon if closer
+    region: frankfurt
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python telegram_bot.py"
     envVars:
@@ -13,4 +13,26 @@ Services:
       - key: IQ_PASSWORD
         sync: false
       - key: TELEGRAM_TOKEN
-        sync: false   # add in Render dashboard
+        sync: false
+      - key: ADMIN_ID
+        sync: false
+      - key: TELEGRAM_API_ID
+        sync: false
+      - key: TELEGRAM_API_HASH
+        sync: false
+      - key: SIGNAL_CHANNEL_ID
+        sync: false
+      
+      # Non-sensitive configuration - set with defaults
+      - key: HEALTH_CHECK_INTERVAL
+        value: "300"
+      - key: HEARTBEAT_TIMEOUT
+        value: "600"
+      - key: MAX_RESTART_ATTEMPTS
+        value: "5"
+      - key: RESTART_DELAY
+        value: "10"
+      - key: DATABASE_PATH
+        value: "trades.db"
+      - key: TIMEZONE
+        value: "America/Sao_Paulo"
