--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ IQ_EMAIL=Goodnessgushe15@gmail.com
 IQ_PASSWORD=IQmKA647KA
 TELEGRAM_TOKEN=8350764705:AAFulH1uVxmrAgqb-6nIADGCc86IjmetDH8
 ADMIN_ID=6576377077
+TELEGRAM_API_ID=30186300
+TELEGRAM_API_HASH=e7fc49144907fb9404839d068b9696ad
+CHANNEL_ID_1=-1003457213931
+CHANNEL_ID_2=-1002551711564
+CHANNEL_USERNAME=
