--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,10 @@ websocket-client==1.7.0
 
 # Environment variable management
 python-dotenv==1.0.0
+pytz==2023.3
+telethon==1.28.5
+
+
 
 # --- Optional / Safe upgrades ---
 # These packages are indirect dependencies used by httpx & requests.
