feat: configure preferred trading type and refactor binary trade outcome calculation for improved PnL accuracy and timeout.

--- a/render.yaml
+++ b/render.yaml
@@ -35,4 +35,6 @@ services:
       - key: DATABASE_PATH
         value: "trades.db"
       - key: TIMEZONE
-        value: "America/Sao_Paulo"
+        value: "Africa/Lagos"
+      - key: PREFERRED_TRADING_TYPE
+        value: "AUTO"
